# OpenLegislation-local-dev

./: .claude_agent_farm_state.json  .env  .env.example  .gitconfig.example  .gitignore  .pre-commit-config.yaml  .roomodes  DIFF_2025-09-26T06-50-09Z.md  DIFF_2025-09-26T08-30-00Z.md  DIFF_2025-09-29T21-40-03Z.md  DIFF_20250927T155203Z.md  DIFF_20250929_125611.md  DIFF_20250929_213641.md  DIFF_20250929_214035.md  DIFF_20251015_003842.md  DIFF_20251015_005617.md  DIFF_20251015_010013.md  DIFF_20251015_010154.md  README.md  README_DEV.md  RECOMMENDATIONS_2025-09-26T06-50-09Z.md  RECOMMENDATIONS_2025-09-26T08-30-00Z.md  RECOMMENDATIONS_2025-09-29T21-40-03Z.md  RECOMMENDATIONS_20250927T155203Z.md  RECOMMENDATIONS_20250929_125611.md  RECOMMENDATIONS_20250929_213641.md  RECOMMENDATIONS_20250929_214035.md  RECOMMENDATIONS_20251015_003842.md  RECOMMENDATIONS_20251015_005617.md  RECOMMENDATIONS_20251015_010013.md  RECOMMENDATIONS_20251015_010154.md  ingestion_log.json  pom.xml  requirements.txt  setup_user.sh  test_ssh_manual.sh
tools/: README.fetch_govinfo.md  README.md  README_linear_import.md  README_member_ingestion.md  README_universal_database.md  SETUP_BULK_INGEST.md  apply_tracker_migration.py  base_ingestion_process.py  bill_status_ingestion.py  bill_vote_ingestion.py  bulk_ingest_congress_data.sh  bulk_ingest_congress_gov.sh  bulk_ingest_govinfo.py  bulkdata_pipeline.py  check_db.py  db_config.json  db_config.py  db_config_template.json  diagnostic_check.py  download_govinfo_samples.sh  extract_sql_schema.py  federal_ingestion_demo.sh  fetch_congress_members.py  (+71 more)
(+813 files in other folders)
